--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font: 18px andale mono, monospace;
+    font: 18px Helvetica, sans-serif;
     line-height: 1.8;
     color: black;
     padding-top: 0px !important;
